--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-Debug/*
-Release/*
-*/Debug/*
-*/Release/*
-*.opensdf
-*.sdf
-*.suo
-*.vcxproj.user
+CMakeCache.txt
+CMakeFiles
+Makefile
+cmake_install.cmake
+install_manifest.txt
+*/bin/*
+build
