--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ compiler:
   
 before_script:
   - sudo apt-get update -qq
-  - sudo apt-get install -y libboost-filesystem-dev
-  - sudo apt-get install -y libboost-program-options-dev
-  - sudo apt-get install -y libboost-regex-dev
-  - sudo apt-get install -y libboost-system-dev
+  - sudo apt-get install -y libboost-filesystem1.55-dev
+  - sudo apt-get install -y libboost-program-options1.55-dev
+  - sudo apt-get install -y libboost-regex1.55-dev
+  - sudo apt-get install -y libboost-system1.55-dev
   - mkdir build
   - cd build
   - cmake ..
