Added rudimentary support for 24- and 32-bit bitmaps.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ compiler:
   - gcc
   
 before_script:
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-get update -qq
+  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.9; fi
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
   - sudo apt-get install -y libboost-filesystem-dev
   - sudo apt-get install -y libboost-program-options-dev
   - sudo apt-get install -y libboost-regex-dev
