--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,27 @@ language: cpp
 compiler:
   - gcc
   
-before_script:
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+before_install:
   - sudo apt-get update -qq
-  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
-  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
-  - sudo apt-get install -y libboost-filesystem-dev
-  - sudo apt-get install -y libboost-program-options-dev
-  - sudo apt-get install -y libboost-regex-dev
-  - sudo apt-get install -y libboost-system-dev
+  - sudo apt-get install -qq 
+  
+install:
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get update
+  - sudo apt-get install g++-4.8
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
+  - sudo apt-get install libstdc++-4.8-dev
+  # Install boost
+  - wget --no-verbose --output-document=boost-trunk.tar.bz2 http://sourceforge.net/projects/boost/files/boost/1.56.0/boost_1_56_0.tar.bz2/download
+  - export BOOST_ROOT="$TRAVIS_BUILD_DIR/../boost-trunk"
+  - export CMAKE_MODULE_PATH="$BOOST_ROOT"
+  - mkdir -p $BOOST_ROOT
+  - tar jxf boost-trunk.tar.bz2 --strip-components=1 -C $BOOST_ROOT
+  - (cd $BOOST_ROOT; ./bootstrap.sh --with-libraries=filesystem,system,regex,program_options)
+  - (cd $BOOST_ROOT; ./b2 link=static threading=multi --prefix=$BOOST_ROOT -d0 install)
+
+before_script:
   - mkdir build
   - cd build
   - cmake ..
