--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ endif()
 set(Boost_USE_STATIC_LIBS ON)
 set(Boost_USE_MULTITHREADED ON)
 set(Boost_USE_STATIC_RUNTIME OFF)
-find_package(Boost 1.56.0 COMPONENTS system regex filesystem program_options REQUIRED)
+find_package(Boost 1.56.0 COMPONENTS system filesystem program_options REQUIRED)
 
 include_directories(${Boost_INCLUDE_DIRS} ${FlicTool_SOURCE_DIR}/include)
 set(LIBS ${LIBS} ${Boost_LIBRARIES})
